@@ -41,6 +41,7 @@ o Improve first time dialog once again ..
   music, and muine monitors it .. 
 o Fix the bug where keysyms that are assigned while muine is running aren't
   working.
+o Speedier startup
 
 Graphic artists needed:
 =======================
@@ -52,6 +53,7 @@ o Nicer default cover image
 Depends on other components:
 ============================
 
+o Use Gtk# pkg-config files once Gtk# 0.19 is released
 o Directly use Pango# instead of using pango-utils.c
   Depends on Gtk#, Ximian Bugzilla #52575
 o Monitor imported folders using FileWatcher
