@@ -1,3 +1,13 @@
+2004-04-03  Jorn Baayen  <jbaayen@gnome.org>
+
+	* TODO:
+	* src/PlaylistWindow.cs:
+	* src/SongDatabase.cs:
+
+	Remove db changing mutex, removes some semi-lockups seen when
+	upgrading muine. Also make the changes thread and idle run
+	concurrently.
+
 2004-04-02  Jorn Baayen  <jbaayen@gnome.org>
 
 	* README:
